[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
async-std = "1.12.0"
image = "0.24.7"
serde = "1.0.190"
serde_cbor = "0.11.2"
log = "0.4.20"
env_logger = "0.10.0"
tokio = { version = "1.33.0", features = ["full"] }
