[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
env_logger = "0.10.0"
log = "0.4.20"
serde_cbor = "0.11.2"
tokio = { version = "1.33.0", features = ["full"] }